[package]
name = "btclib"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Luis Boscan"]
description = "Educational blockchain library implementing Bitcoin-like functionality"
repository = "https://github.com/lfbos/custom-dlt-rs"
keywords = ["blockchain", "bitcoin", "cryptocurrency", "education"]
categories = ["cryptography", "network-programming"]

[dependencies]
bigdecimal = "0.4.8"
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.6.0"
spki = { version = "0.7", features = ["pem"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["net"] }
tracing = "0.1"
uint = "0.10.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
