[package]
name = "miner"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Luis Boscan"]
description = "Proof-of-Work miner for educational blockchain"

[dependencies]
anyhow = "1.0.100"
btclib = { path = "../lib" }
clap = { version = "4.5.48", features = ["derive"] }
flume = "0.11.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
