[package]
name = "node"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Luis Boscan"]
description = "Full node implementation for educational blockchain"

[dependencies]
anyhow = "1.0.100"
btclib = { version = "0.1.0", path = "../lib" }
clap = { version = "4.5.48", features = ["derive", "env"] }
chrono = "0.4.42"
dashmap = "6.1.0"
static_init = "1.0.4"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
